[workspace]
resolver = "2"
members = []

[package]
name = "cushy-show"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cushy = { git = "https://github.com/khonsulabs/cushy" }
rand = "0.8.5"
rsn = "0.1.0"
syntect = "5.1.0"
